@@ -1,3 +1,7 @@
+2005-02-18 Dom Lachowicz <cinamod@hotmail.com>
+
+	* rsvg-structure.c: bug 167813
+
 2005-2-17  Caleb Moore <c.moore@student.unsw.edu.au>
 
 	* rsvg-paint-server.c: modified to allow patterns to be rendered on a 
